assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1&display=swap');

#shop-container, #shop-container-lg, #shop-container-xl {
    max-width: 2000px;
}

body{
    background-color: white;
    font-family: 'Montserrat', sans-serif;
    color: black; 
    font-size: 1rem;
    letter-spacing: 1px;
}
@media (min-width: 992px){
.navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 7.5rem;
    padding-left: 2.5rem;
}
}

.mybg{
    background-color: white;
    border-bottom: solid #f39a82 1px;
    
}
  
.mainlogo{
    position: absolute;
    top:70%;
    left:50%;
    transform: translate( -50%, -50%);
    widows: 100px;
    height: auto;
        }

section{
    min-height: 80vh;
}


footer {
    background-color: white;
    width: 100%;
    position: relative;
    top: 100px;
    border-top: solid #f39a82 1px;
       }

       h5{
           position: relative;
           top: 10px;
       }
/* footer logo */
.handlogo{
    width: 31px;
    height: 34.5px;
}
/* social media links in footer */
.social-links li a i{
    width: 50px;
    height: 50px;
    color: black;
    size: 100px;
   
}

/* subscribe form  */
.mailing-form,
.mailing-text {
    display: flex;
    width: 100%;
}
/* ​subscription input in footer */
.mailing-form input[type=text] {
    padding: 10px;
    border: 1px solid #a1b894;
    width: 100%;
    background: #fafafa;
}
​
.mailing-form button {
    width: 20%;
    padding: 10px;
    background: blue;
    color: #fafafa;
    border: 1px solid black;
    cursor: pointer;
}


/* about page */
h1{
    padding: 3px;
}

.my-container{
    position: relative;
    top: 30px;
}

.beauty-woman{
    max-width: 100%;
    position: relative;
    
}

.abouttitle{
   font-family: 'Shippori Mincho B1', serif;
}

@media (min-width: 1400px) {
.row-about-2, .row-about-2-lg{
    padding: 70px; 

}
}
.row-about-2{
    margin-top: 40px;
}

.h4{
    margin-bottom: 50px;
    font-weight: 1000;
    line-height: 100px;
}
p{
    margin-bottom: 50px;
}
    
/* top section of page */


/* information section */

.my-container-2{
    position: relative;
    top: 100px;
}

    /* Team Pictures */
  
#meet-the-team{
text-align: center;
  
}

/* Shop Page */
.shop{
    padding: 1%;
}

.shop-image{
    object-fit: cover;
    width: 100%;
    height: 300px;
    position: relative; right: 20px; 
      object-fit: cover;

}

.product1:hover .overlay {
  opacity: 1;
}

.product2:hover .overlay {
  opacity: 1;
}

.product3:hover .overlay {
  opacity: 1;
}

.product4:hover .overlay {
  opacity: 1;
}

.product5:hover .overlay {
  opacity: 1;
}

.product6:hover .overlay {
  opacity: 1;
}
.product7:hover .overlay {
  opacity: 1;
}


.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .1s ease;
  background-color: #a1b894;}

  .text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.bottles{
    width: 100%;
    height: 100%;
}

/* -----Sustaible page */
video {
  width: 100%;
  height: auto;
}
/* ------Contact Page-------- */

.contactpic{
    width: 1600px;
    height:1910px ;
}

/* Style inputs with type="text", select elements and textareas */
input[type=text], select, textarea {
  width: 100%; /* Full width */
  padding: 12px; /* Some padding */ 
  border: 1px solid #ccc; /* Gray border */
  border-radius: 4px; /* Rounded borders */
  box-sizing: border-box; /* Make sure that padding and width stays in place */
  margin-top: 6px; /* Add a top margin */
  margin-bottom: 16px; /* Bottom margin */
  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
}

/* Style the submit button with a specific background color etc */
input[type=submit] {
  background-color: #4CAF50;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

/* When moving the mouse over the submit button, add a darker green color */
input[type=submit]:hover {
  background-color: #45a049;
}

/* Add a background color and some padding around the form */
.container .inputform {
  border-radius: 5px;
  background-color: #f2f2f2;
  padding: 20px;
}

